--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "openai": "^4.23.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
