--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "openai": "^4.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "uuidv4": "^6.2.13"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
